2011-04-17  David Kilzer  <ddkilzer@apple.com>

        <http://webkit.org/b/58463> Switch HTTP pipelining from user default to private setting
        <rdar://problem/9268729>

        Reviewed by Dan Bernstein.

        This replaces support for the WebKitEnableHTTPPipelining user
        default with methods on the WebCore::ResourceRequest class in
        WebCore, the WebView class in WebKit1, and the WebContext class
        in WebKit2.  It also removes support for the
        WebKitForceHTTPPipeliningPriorityHigh user default which was not
        needed.

        * UIProcess/API/C/WKContext.cpp:
        (_WKContextSetHTTPPipeliningEnabled): Added.
        * UIProcess/API/C/WKContextPrivate.h:
        (_WKContextSetHTTPPipeliningEnabled): Added declaration.
        * UIProcess/WebContext.cpp:
        (WebKit::WebContext::setHTTPPipeliningEnabled): Added.
        (WebKit::WebContext::httpPipeliningEnabled): Added.
        * UIProcess/WebContext.h:
        (WebKit::WebContext::setHTTPPipeliningEnabled): Added declaration.
        (WebKit::WebContext::httpPipeliningEnabled): Added declaration.

2011-04-17  Sam Weinig  <sam@webkit.org>

        Reviewed by Geoffrey Garen.

        Make more strings in WebKit2 localizable
        https://bugs.webkit.org/show_bug.cgi?id=58757

        * UIProcess/API/mac/PDFViewController.mm:
        (-[WKPDFView menuForEvent:]):
        * UIProcess/API/mac/PageClientImpl.mm:
        (WebKit::PageClientImpl::setViewportArguments):
        (WebKit::PageClientImpl::registerEditCommand):
        * UIProcess/WebEditCommandProxy.cpp:
        (WebKit::WebEditCommandProxy::nameForEditAction):
        * UIProcess/WebEditCommandProxy.h:
        Use WebCore's localization macro to make more strings localizable.

2011-04-17  Patrick Gansterer  <paroga@webkit.org>

        Reviewed by Adam Barth.

        Rename PLATFORM(CA) to USE(CA)
        https://bugs.webkit.org/show_bug.cgi?id=58742

        * WebProcess/WebPage/LayerTreeHost.cpp: